--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -2,6 +2,24 @@ server {
     listen 80;
     server_name chillyme.shop www.chillyme.shop;
 
+    return 301 https://$host$request_uri;
+
+}
+
+server {
+    listen 443 ssl;
+    server_name chillyme.shop www.chillyme.shop;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    ssl_certificate /etc/letsencrypt/live/chillyme.shop/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/chillyme.shop/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     location /static/ {
         alias /vol/static/;
     }
@@ -14,4 +32,6 @@ server {
         uwsgi_pass app:8000;
         include /etc/nginx/uwsgi_params;  # Fixed the path as well
     }
+
+
 }
