Corrected a bug in default.conf

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -2,8 +2,9 @@ server {
     listen 80;
     server_name chillyme.shop www.chillyme.shop;
 
-    return 301 https://$host$request_uri;
-
+    location /{
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
