--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -29,17 +29,17 @@ services:
     volumes:
       - static_data:/vol/static/
       - media_data:/vol/media/
-      - certbot_conf:/etc/letsencrypt/
-      - certbot_www:/var/www/certbot/
+      - certbot_conf:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
     depends_on:
       - app
   certbot:
     image: certbot/certbot
     container_name: certbot
     volumes:
-      - certbot_conf:/etc/letsencrypt/
-      - certbot_www:/var/www/certbot/
-    entrypoint: certbot certonly --webroot --webroot-path=/var/www/certbot --email calebchebii9@gmail.com --agree-tos --no-eff-email --staging -d chillyme.shop -d www.chillyme.shop
+      - certbot_conf:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email calebchebii9@gmail.com -d chillyme.shop -d www.chillyme.shop --agree-tos
 volumes:
   database_data:
   static_data:
