--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -2,28 +2,28 @@ server {
     listen 80;
     server_name chillyme.shop www.chillyme.shop;
 
-    location /.well-known/acme-challenge/ {
+    location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    location /{
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http3;
     server_name chillyme.shop www.chillyme.shop;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
 
     ssl_certificate /etc/letsencrypt/live/chillyme.shop/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/chillyme.shop/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
+
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location /static/ {
         alias /vol/static/;
