--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginxinc/nginx-unprivileged:1-alpine
+FROM nginx:alpine
 
 COPY ./default.conf /etc/nginx/conf.d/default.conf
 COPY ./uwsgi_params /etc/nginx/uwsgi_params
@@ -9,4 +9,3 @@ RUN mkdir -p /vol/static /vol/media /var/www/certbot && \
     chmod -R 755 /vol/static /vol/media /var/www/certbot && \
     chown -R nginx:nginx /vol/static /vol/media /var/www/certbot
 
-USER nginx
