Its working now, exposed the 443 port in docker-compose file

--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -9,3 +9,7 @@ RUN mkdir -p /vol/static /vol/media /var/www/certbot && \
     chmod -R 755 /vol/static /vol/media /var/www/certbot && \
     chown -R nginx:nginx /vol/static /vol/media /var/www/certbot
 
+RUN mkdir -p /etc/letsencrypt/live/chillyme.shop/ && \
+    mkdir -p /etc/letsencrypt/archive/chillyme.shop/ && \
+    chown -R nginx:nginx /etc/letsencrypt/live/chillyme.shop/ && \
+    chown -R nginx:nginx /etc/letsencrypt/archive/chillyme.shop/
